# mentee_cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  release.yml
src/: add_mentee.rs  call_service.rs  cli.rs  config.rs  constants.rs  delete_mentee.rs  error.rs  get_mentees.rs  lib.rs  main.rs  mentee.rs  mentee_service.rs  mentorship_service.rs  update_mentee.rs  utils.rs
src/db/: connection.rs  migrations.rs
src/mentorship_service/: call_service.rs  mentee_service.rs  mod.rs  payment_service.rs  video_service.rs
src/models/: call.rs  mentee.rs  mod.rs  payment.rs  video.rs
src/repositories/: call_repository.rs  mentee_repository.rs  mod.rs  payment_repository.rs  video_repository.rs
src/services/: call_service.rs  mentee_service.rs  mod.rs  payment_service.rs  video_service.rs
src/utils/: mod.rs  ui.rs  validation.rs
tests/: integration_test.rs
