[package]
name = "mentees"
version = "0.1.0"
edition = "2021"
description = "CLI to manage mentees"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
cli-table = "0.4.9"
dirs = "5.0.1"
inquire = { version = "0.7.5", features = ["date"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
